--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "evmspec"
-version = "0.0.1"
+version = "0.0.2"
 description = "A collection of msgspec.Struct definitions for use with the Ethereum Virtual Machine"
 authors = ["BobTheBuidler <bobthebuidlerdefi@gmail.com>"]
 
@@ -10,6 +10,7 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.dependencies]
 python = ">=3.8,<3.13"
+cachetools = ">=4.1.1,<6"
 dictstruct = ">=0.0.1"
 hexbytes = "*"
 typing_extensions = ">=4.0.0"
