--- a/.github/workflows/mypy.yaml
+++ b/.github/workflows/mypy.yaml
@@ -30,7 +30,7 @@ jobs:
     - name: Install MyPy
       run: |
         python -m pip install --upgrade pip
-        pip install mypy types-requests types-aiofiles
+        pip install mypy types-cachetools
 
     - name: Run MyPy
       run: mypy ./evmspec --pretty --ignore-missing-imports --show-error-codes --show-error-context --no-warn-no-return
