--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,8 @@ typing_extensions = ">=4.0.0"
 [tool.poetry.dev-dependencies]
 sphinx = "*"
 sphinx-rtd-theme = "*"
+mypy = "*"
+types-cachetools = "*"
 
 [tool.mypy]
 ignore_missing_imports = true
