--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ build-backend = "poetry.core.masonry.api"
 python = ">=3.8,<3.13"
 cachetools = ">=4.1.1,<6"
 dictstruct = ">=0.0.1"
+eth-utils = ">=1.10.0"
 hexbytes = "*"
 typing_extensions = ">=4.0.0"
 
