--- a/.github/workflows/mypy.yaml
+++ b/.github/workflows/mypy.yaml
@@ -27,5 +27,11 @@ jobs:
       with:
         python-version: ${{ matrix.pyversion }}
 
+    - name: Install Poetry
+      uses: snok/install-poetry@v1
+
+    - name: Install Dependencies
+      run: poetry install --no-interaction
+
     - name: Run MyPy
-      run: mypy ./evmspec --pretty --ignore-missing-imports --show-error-codes --show-error-context --no-warn-no-return
+      run: make mypy
