--- a/.github/workflows/mypy.yaml
+++ b/.github/workflows/mypy.yaml
@@ -29,6 +29,10 @@ jobs:
 
     - name: Install Poetry
       uses: snok/install-poetry@v1
+      
+    - name: Add Poetry to PATH on Windows
+      if: runner.os == 'Windows'
+      run: $env:Path += ";$env:USERPROFILE\.poetry\bin"
 
     - name: Install Dependencies
       run: poetry install --no-interaction
