fix(test): dont use pytest asyncio plugin

--- a/.github/workflows/pytest.yaml
+++ b/.github/workflows/pytest.yaml
@@ -57,4 +57,4 @@ jobs:
           PYTEST_NETWORK: mainnet
           ETHERSCAN_TOKEN: ${{ secrets.ETHERSCAN_TOKEN  }}
         run: |
-          poetry run pytest --asyncio-task-timeout=3600
+          poetry run pytest
