--- a/.github/workflows/pytest.yaml
+++ b/.github/workflows/pytest.yaml
@@ -50,7 +50,9 @@ jobs:
         uses: snok/install-poetry@v1
 
       - name: Install Dependencies
-        run: poetry install --no-interaction
+        run: |
+          poetry install --no-interaction
+          poetry run python -m pip install "eth-hash[pysha3]"
 
       - name: Run test suite
         env:
