--- a/.github/workflows/pytest.yaml
+++ b/.github/workflows/pytest.yaml
@@ -64,7 +64,9 @@ jobs:
         uses: snok/install-poetry@v1
 
       - name: Install Dependencies
-        run: poetry run python -m pip install .
+        run: |
+          poetry install --non-interactive
+          poetry run python -m pip install .
 
       - name: Run test suite
         env:
