--- a/.github/workflows/pytest.yaml
+++ b/.github/workflows/pytest.yaml
@@ -66,7 +66,7 @@ jobs:
       - name: Install Dependencies
         run: |
           poetry install --no-interaction
-          poetry run python -m pip install "eth-hash[pysha3]"
+          poetry run python -m pip install .
 
       - name: Run test suite
         env:
