--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = "A collection of msgspec.Struct definitions for use with the Ether
 authors = ["BobTheBuidler <bobthebuidlerdefi@gmail.com>"]
 
 [build-system]
-requires = ["setuptools", "wheel", "mypy[mypyc]", "tomli>=2.0.0; python_version < '3.11'"]
+requires = ["setuptools", "wheel", "mypy[mypyc]", "types-cachetools", "tomli>=2.0.0; python_version < '3.11'"]
 build-backend = "setuptools.build_meta"
 
 [tool.poetry.dependencies]
