fix(cicd): release workflow building wheel

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -31,4 +31,5 @@ jobs:
     - name: Build and Publish
       run: |
         poetry config pypi-token.pypi ${{ secrets.PYPI_PASSWORD }}
-        poetry publish --build --no-interaction --format sdist 
+        poetry build --format sdist
+        poetry publish --no-interaction
