--- a/.github/workflows/pytest.yaml
+++ b/.github/workflows/pytest.yaml
@@ -65,6 +65,7 @@ jobs:
 
       - name: Install Dependencies
         run: |
+          poetry run python -m pip install pytest
           poetry run python -m pip install .
 
       - name: Run test suite
