--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -129,7 +129,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install setuptools wheel twine mypy[mypyc]
+          pip install -U setuptools wheel twine mypy[mypyc] types-cachetools
 
       - name: Build sdist
         run: |
