fix: add eth-hash to deps

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ python = ">=3.8,<3.13"
 cachetools = ">=4.1.1,<6"
 cchecksum = ">=0.0.3"
 dictstruct = ">=0.0.1"
+eth-hash = ">=0.7.0,<1"
 hexbytes = "*"
 typing_extensions = ">=4.0.0"
 pysha3 = { version = ">=1.0.0,<2.0.0", markers = "python_version < '3.9'" }
