--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,12 +6,14 @@ authors = ["BobTheBuidler <bobthebuidlerdefi@gmail.com>"]
 
 [build-system]
 requires = [
-  "setuptools",
-  "wheel",
-  "mypy[mypyc]>=1.14.1,<1.17.1",
-  "types-cachetools",
-  "tomli>=2.0.0; python_version < '3.11'",
-  "cchecksum>=0.3.1",
+    "setuptools",
+    "wheel",
+    "mypy[mypyc]>=1.14.1,<1.17.1",
+    "types-cachetools",
+    "tomli>=2.0.0; python_version < '3.11'",
+    "cchecksum>=0.3.1",
+    "eth-hash>=0.7.0,<1",
+    "eth-typing>=4.4.0,<6",
 ]
 build-backend = "setuptools.build_meta"
 
