--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ requires = [
     "cchecksum>=0.3.1",
     "eth-hash>=0.7.0,<1",
     "eth-typing>=4.4.0,<6",
+    "faster-eth-utils>=4,<6",
     "faster-hexbytes<2",
 ]
 build-backend = "setuptools.build_meta"
@@ -25,6 +26,7 @@ cchecksum = ">=0.0.3"
 dictstruct = ">=0.0.1"
 eth-hash = ">=0.7.0,<1"
 eth-typing = ">=4.4.0,<6"
+faster-eth-utils = ">=4,<6"
 faster-hexbytes = "<2"
 typing_extensions = ">=4.0.0"
 safe-pysha3 = ">=1.0.0"
