--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,7 +25,7 @@ dictstruct = ">=0.0.1"
 eth-hash = ">=0.7.0,<1"
 eth-typing = ">=4.4.0,<6"
 faster-eth-utils = ">=4,<6"
-faster-hexbytes = "<2"
+faster-hexbytes = ">=1.3.2,<2"
 typing_extensions = ">=4.0.0"
 safe-pysha3 = ">=1.0.0"
 
