--- a/.github/workflows/pytest.yaml
+++ b/.github/workflows/pytest.yaml
@@ -36,6 +36,9 @@ jobs:
           pyversion: "3.8"
         - os: macos-latest
           pyversion: "3.9"
+    defaults:
+      run:
+        shell: bash
 
     steps:
       - name: Check out repository code
@@ -64,11 +67,6 @@ jobs:
       - name: Install Poetry
         if: steps.cached-poetry.outputs.cache-hit != 'true' && matrix.pyversion != '3.8'
         uses: snok/install-poetry@v1
-
-      - name: Add Poetry to PATH (Windows only)
-        if: runner.os == 'Windows'
-        run: echo "$env:APPDATA\Python\Scripts" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
-        shell: pwsh
 
       - name: Install Pytest
         run: poetry run python -m pip install pytest
