--- a/.github/workflows/pytest.yaml
+++ b/.github/workflows/pytest.yaml
@@ -8,6 +8,8 @@ on:
       - '**/pytest.yaml'
       - 'pyproject.toml'
       - 'poetry.lock'
+  schedule:
+    - cron: '0 2 * * *' # Every day at 2:00 AM UTC
       
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
@@ -34,6 +36,9 @@ jobs:
           pyversion: "3.8"
         - os: macos-latest
           pyversion: "3.9"
+    defaults:
+      run:
+        shell: bash
 
     steps:
       - name: Check out repository code
