--- a/.github/workflows/pytest.yaml
+++ b/.github/workflows/pytest.yaml
@@ -68,13 +68,12 @@ jobs:
         if: steps.cached-poetry.outputs.cache-hit != 'true' && matrix.pyversion != '3.8'
         uses: snok/install-poetry@v1
 
-      - name: Install Pytest
-        run: poetry run python -m pip install pytest
-
-      - name: Install Evmspec
-        run: poetry run python -m pip install .
+      - name: Install Pytest and Evmspec
+        shell: bash
+        run: poetry run python -m pip install pytest .
 
       - name: Run test suite
+        shell: bash
         env:
           PYTEST_NETWORK: mainnet
           ETHERSCAN_TOKEN: ${{ secrets.ETHERSCAN_TOKEN  }}
