--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,7 @@ requires = [
     "tomli>=2.0.0; python_version < '3.11'",
     "cchecksum>=0.3.1",
     "eth-hash>=0.7.0,<1",
-    "eth-typing>=4.4.0,<6",
+    "eth-typing==5.2.1",
 ]
 build-backend = "setuptools.build_meta"
 
