--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,7 +31,7 @@ safe-pysha3 = ">=1.0.0"
 
 [tool.poetry.group.dev.dependencies]
 sphinx = ">=7,<10"
-sphinx-rtd-theme = "*"
+sphinx-rtd-theme = "3.1.0"
 mypy = "*"
 types-cachetools = "*"
 pytest = "*"
