Move mypy flags into config

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,3 +40,7 @@ eth-utils = ">=1.10.0"
 
 [tool.mypy]
 ignore_missing_imports = true
+pretty = true
+show_error_codes = true
+show_error_context = true
+no_warn_no_return = true
