--- a/.github/workflows/mypy.yaml
+++ b/.github/workflows/mypy.yaml
@@ -53,4 +53,4 @@ jobs:
 
     - name: Run MyPy
       shell: bash
-      run: poetry run mypy ./evmspec --pretty --ignore-missing-imports --show-error-codes --show-error-context --no-warn-no-return
+      run: poetry run mypy ./evmspec
