Update pytest workflow: cache Poetry in workspace and set `poetry-home` (#198)
### Motivation

- Avoid relying on a job-level default shell and the implicit PATH
layout by removing the `defaults: run: shell: bash` block.
- Ensure Poetry is installed to a reproducible location so its binaries
are available on PATH by caching under the workspace.
- Simplify the install logic by removing an unused Python 3.8-specific
install step and using a single install step guarded by the cache hit.
- Address issues where Poetry’s location on PATH caused test-run
failures by explicitly setting `poetry-home`.

### Description

- Removed the job-level `defaults: run: shell: bash` from
`.github/workflows/pytest.yaml`.
- Changed the cache `path` from `~/.local` to `${{ github.workspace
}}/.poetry` so Poetry is cached inside the repo workspace.
- Deleted the conditional Poetry install step that targeted Python 3.8
specifically and unified to a single `snok/install-poetry@v1` step.
- Added `with: poetry-home: ${{ github.workspace }}/.poetry` to the
`snok/install-poetry@v1` step and kept the `if:
steps.cached-poetry.outputs.cache-hit != 'true'` guard.

### Testing

- No automated tests were run because this is a CI workflow-only change.

------
[Codex
Task](https://chatgpt.com/codex/tasks/task_e_6966682d15e883319ac1cbb192a39d34)

--- a/.github/workflows/pytest.yaml
+++ b/.github/workflows/pytest.yaml
@@ -30,10 +30,6 @@ jobs:
           path: ~/Library/Caches/pip
         - os: windows-latest
           path: ~\AppData\Local\pip\Cache
-    defaults:
-      run:
-        shell: bash
-
     steps:
       - name: Check out repository code
         uses: actions/checkout@v6
@@ -49,18 +45,19 @@ jobs:
         id: cached-poetry
         uses: actions/cache@v5
         with:
-          path: ~/.local  # the path depends on the OS
+          path: ${{ github.workspace }}/.poetry
           key: poetry-${{ runner.os }}-${{ matrix.pyversion }}-0  # increment to reset cache
-          
-      - name: Install Poetry (Python3.8)
-        if: steps.cached-poetry.outputs.cache-hit != 'true' &&  matrix.pyversion == '3.8'
-        uses: snok/install-poetry@v1
-        with:
-          version: "1.8.5" 
+
+      - name: Add cached Poetry to PATH
+        if: steps.cached-poetry.outputs.cache-hit == 'true'
+        shell: bash
+        run: echo "${{ github.workspace }}/.poetry/bin" >> "$GITHUB_PATH"
           
       - name: Install Poetry
-        if: steps.cached-poetry.outputs.cache-hit != 'true' && matrix.pyversion != '3.8'
+        if: steps.cached-poetry.outputs.cache-hit != 'true'
         uses: snok/install-poetry@v1
+        with:
+          poetry-home: ${{ github.workspace }}/.poetry
 
       - name: Install Pytest and Evmspec
         shell: bash
