--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,7 +40,6 @@ eth-utils = ">=1.10.0"
 
 [tool.mypy]
 ignore_missing_imports = true
-pretty = true
+strict = true
 show_error_codes = true
 show_error_context = true
-no_warn_no_return = true
