--- a/.github/workflows/pytest.yaml
+++ b/.github/workflows/pytest.yaml
@@ -22,7 +22,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ ubuntu-latest, macos-latest, windows-latest ]
-        pyversion: [ "3.10", "3.11", "3.12", "3.13" ]
+        pyversion: [ "3.10", "3.11", "3.12", "3.13", "3.14" ]
         include:
         - os: ubuntu-latest
           path: ~/.cache/pip
