--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ requires = [
     "cchecksum>=0.3.1",
     "eth-hash>=0.7.0,<1",
     "eth-typing==5.2.1",
+    "ez-a-sync==0.33.10",
 ]
 build-backend = "setuptools.build_meta"
 
