--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ requires = [
     "mypy[mypyc]==1.19.0",
     "types-cachetools",
     "tomli>=2.0.0; python_version < '3.11'",
-    "cchecksum>=0.3.1",
+    "cchecksum==0.3.9",
     "eth-hash>=0.7.0,<1",
     "eth-typing==5.2.1",
     "ez-a-sync==0.33.10",
