--- a/.github/workflows/benchmark.yaml
+++ b/.github/workflows/benchmark.yaml
@@ -2,7 +2,7 @@ name: Benchmark Suite
 
 on:
   pull_request:
-    branches: [main, master]
+    branches: [master]
     paths:
       - ".github/workflows/benchmark.yaml"
       - "evmspec/**"
@@ -12,7 +12,7 @@ on:
       - "requirements-codspeed.txt"
       - "requirements-pytest.txt"
   push:
-    branches: [main, master]
+    branches: [master]
     paths:
       - ".github/workflows/benchmark.yaml"
       - "evmspec/**"
@@ -33,8 +33,6 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
-      matrix:
-        shard: [1, 2, 3, 4]
     steps:
       - uses: actions/checkout@v6
 
@@ -48,17 +46,11 @@ jobs:
             setup.py
             poetry.lock
 
-      - name: Install built wheel and codspeed dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install .
-
-      - name: Remove source package to force use of installed C extensions
-        run: rm -rf evmspec
+      - name: Install evmspec
+        run: python -m pip install --upgrade pip && python -m pip install .
 
       - name: Run CodSpeed
         uses: CodSpeedHQ/action@v4
         with:
           mode: instrumentation
-          run: |
-            pytest --codspeed --test-group=${{ matrix.shard }} --test-group-count=4 benchmarks/
+          run: pytest --codspeed benchmarks/
