--- a/.github/workflows/benchmark.yaml
+++ b/.github/workflows/benchmark.yaml
@@ -47,7 +47,7 @@ jobs:
             poetry.lock
 
       - name: Install evmspec
-        run: python -m pip install --upgrade pip && python -m pip install .
+        run: python -m pip install --upgrade pip && python -m pip install . -r requirements-codspeed.txt
 
       - name: Run CodSpeed
         uses: CodSpeedHQ/action@v4
