fix(benchmark): run benchmarks on lockfile changes

--- a/.github/workflows/benchmark.yaml
+++ b/.github/workflows/benchmark.yaml
@@ -9,6 +9,7 @@ on:
       - "benchmarks/**"
       - "setup.py"
       - "pyproject.toml"
+      - "poetry.lock"
       - "requirements-codspeed.txt"
       - "requirements-pytest.txt"
   push:
@@ -19,6 +20,7 @@ on:
       - "benchmarks/**"
       - "setup.py"
       - "pyproject.toml"
+      - "poetry.lock"
       - "requirements-codspeed.txt"
       - "requirements-pytest.txt"
   workflow_dispatch:
