feat(cicd): centralize pytest config

--- a/.github/workflows/benchmark.yaml
+++ b/.github/workflows/benchmark.yaml
@@ -53,6 +53,8 @@ jobs:
 
       - name: Run CodSpeed
         uses: CodSpeedHQ/action@v4
+        env:
+          PYTEST_ADDOPTS: "-c benchmarks/pytest.ini"
         with:
           mode: instrumentation
-          run: pytest --codspeed benchmarks/
+          run: pytest
