--- a/.github/workflows/pytest.yaml
+++ b/.github/workflows/pytest.yaml
@@ -68,4 +68,4 @@ jobs:
         env:
           PYTEST_NETWORK: mainnet
           ETHERSCAN_TOKEN: ${{ secrets.ETHERSCAN_TOKEN  }}
-        run: poetry run pytest tests
+        run: poetry run pytest
