feat(cicd): centralize mypy config in pyproject (#245)
## Summary
- move mypy targets/flags into pyproject config
- run mypy in CI without inline args

## Rationale
- keep type-check settings centralized and consistent with repo guidance

## Details
- add/update [tool.mypy] settings and file targets


## Manual testing
- [ ] Not run (CI config change)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,6 +46,7 @@ pretty = true
 show_error_codes = true
 show_error_context = true
 no_warn_no_return = true
+files = ["evmspec"]
 
 [tool.black]
 line-length = 100
