--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ requires = [
     "types-cachetools",
     "tomli>=2.0.0; python_version < '3.11'",
     "cchecksum==0.3.9",
-    "dictstruct==0.0.9",
+    "dictstruct==0.0.9; sys_platform != 'win32' or platform_machine != 'x86'",
     "eth-hash>=0.7.0,<1",
     "eth-typing==5.2.1",
     "ez-a-sync==0.33.10",
