fix(cicd): drop 32-bit Windows from release workflow

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -68,15 +68,6 @@ jobs:
             cibw_archs_windows: AMD64
             artifact_name: "wheels-windows-latest-x64"
 
-          # ----------------------------------------------------
-          # Windows 32-bit
-          # ----------------------------------------------------
-          - os: windows-latest
-            build_type: winx86
-            cibw_build: ""
-            cibw_archs_windows: x86
-            artifact_name: "wheels-windows-latest-x86"
-
     steps:
       - name: Check out code
         uses: actions/checkout@v6
@@ -94,16 +85,13 @@ jobs:
 
       - name: Build wheels
         env:
-          # Skip PyPy
-          CIBW_SKIP: pp*
           # On Linux: manylinux / musllinux arches
           CIBW_ARCHS_LINUX: ${{ matrix.cibw_archs_linux || '' }}
           # On Windows: AMD64 / x86
           CIBW_ARCHS_WINDOWS: ${{ matrix.cibw_archs_windows || '' }}
           # Which wheels to build for Linux (manylinux vs. musllinux)
           CIBW_BUILD: ${{ matrix.cibw_build || '' }}
-        run: |
-          python -m cibuildwheel --output-dir wheelhouse
+        run: python -m cibuildwheel --output-dir wheelhouse
 
       - name: Upload wheels
         uses: actions/upload-artifact@v6
@@ -174,12 +162,6 @@ jobs:
           name: "wheels-windows-latest-x64"
           path: wheelhouse/windows-x64
 
-      - name: Download Windows 32-bit wheels
-        uses: actions/download-artifact@v7
-        with:
-          name: "wheels-windows-latest-x86"
-          path: wheelhouse/windows-x86
-
       # ----------------------------------------------------
       # Publish all built artifacts to PyPI
       # ----------------------------------------------------
@@ -196,4 +178,3 @@ jobs:
             wheelhouse/linux-musl-x86/*.whl \
             wheelhouse/macos/*.whl \
             wheelhouse/windows-x64/*.whl \
-            wheelhouse/windows-x86/*.whl
