--- a/renovate.json
+++ b/renovate.json
@@ -3,7 +3,8 @@
   "extends": [
     "config:recommended"
   ],
+  "rangeStrategy": "replace",
   "lockFileMaintenance": {
-    "prCreation": "never"
+    "enabled": false
   }
 }
